--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="Petition.html">Petition</a>
+          <a href="petition.html">Petition</a>
         </li>
         <li>
-          <a href="SupportOurCause.html">Support Our Cause</a>
+          <a href="supportourcause.html">Support Our Cause</a>
         </li>
       </ul>
     </nav>
